# dragit

./: .dockerignore  .gitignore  Dockerfile.build  README.md  biome.json  index.html  justfile  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: publish.yml  release.yml
graphify-out/: .graphify_labels.json  .graphify_python  GRAPH_REPORT.md  graph.html  graph.json  manifest.json
graphify-out/2026-07-03/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-07-04/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.json  manifest.json
graphify-out/2026-07-05/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-07-06/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-07-07/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-07-08/: .graphify_labels.json  graph.json  manifest.json
graphify-out/2026-07-13/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
packaging/arch/: PKGBUILD.template
src/: app.tsx  main.css  main.tsx  utilities.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: Cargo.toml
src-tauri/src/ai/src/: lib.rs
src-tauri/src/api/: Cargo.toml
src-tauri/src/api/src/: commands.rs  lib.rs  utils.rs
src-tauri/src/diffs/: Cargo.toml
src-tauri/src/diffs/src/: lib.rs  utils.rs
src-tauri/src/git_handler/: Cargo.toml
src-tauri/src/git_handler/src/: cmd_git.rs  lib.rs  utils.rs
src-tauri/src/git_handler/src/cmd_git/: mod.rs  utils.rs
src-tauri/src/models/: Cargo.toml
src-tauri/src/models/src/: app_state.rs  diffs.rs  error.rs  event.rs  git_handler.rs  lib.rs  repo_watcher.rs  repository.rs  settings.rs  storage.rs
src-tauri/src/repo_watcher/: Cargo.toml
src-tauri/src/repo_watcher/src/: debounced_watcher.rs  debouncer.rs  lib.rs  utils.rs
src-tauri/src/settings/: Cargo.toml
src-tauri/src/settings/src/: lib.rs
src-tauri/src/storage/: Cargo.toml
src-tauri/src/storage/src/: lib.rs
src-tauri/src/utils/: Cargo.toml
src-tauri/src/utils/src/: lib.rs
src/api/: client.tsx  commands.ts  events.ts  events.tsx  models.ts  mutations.ts  queries.ts  schemas.ts  serialization.ts  utils.ts
src/api/mutations/: abortCherryPick.ts  abortMerge.ts  abortRebase.ts  abortRevert.ts  addRemote.ts  addToIndex.ts  applyStash.ts  changeRemoteUrl.ts  checkUpdates.ts  checkout.ts  checkoutLocal.ts  cherryPick.ts  cloneRepository.ts  commitIndex.ts  continueCherryPick.ts  continueMerge.ts  continueRebase.ts  continueRevert.ts  createBranch.ts  createTag.ts  deleteBranch.ts  deleteBranches.ts  deleteTag.ts  deleteTags.ts  discardChanges.ts  discardStash.ts  discardStashes.ts  fastForwardBranch.ts  fetchRemote.ts  generateMessage.ts  index.ts  initRepository.ts  installUpdate.ts  merge.ts  openFolder.ts  pullBranch.ts  pushBranch.ts  pushTag.ts  removeBranch.ts  removeFromIndex.ts  (+14 more)
src/api/queries/: appInfo.ts  availableUpdate.ts  branchDivergence.ts  branches.ts  commitFiles.ts  commitHistory.ts  commitInfo.ts  commonAncestor.ts  currentDir.ts  diffSummary.ts  fileConflicts.ts  fileDiff.ts  files.ts  generatedMessage.ts  githubProfilePicture.ts  hasAiApiKey.ts  headInfo.ts  index.ts  matchingCommits.ts  profilePicture.ts  recentlyOpened.ts  remotes.ts  settings.ts  snapshotFiles.ts  stashFiles.ts  stashes.ts  storage.ts  tags.ts  versionedFiles.ts  worktreeFiles.ts
src/components/CurrentDirectory/: index.tsx
src/components/FileStatuses/: index.tsx
src/components/FileStatuses/UnmergedFile/: index.tsx
src/components/Graph/Commit/: index.tsx
src/components/Graph/CurrentBranch/: index.tsx
src/components/common/ActionIndicator/: index.tsx
src/components/common/AskForValueDialog/: index.tsx
src/components/common/BranchSelector/: index.tsx
src/components/common/BranchToolbar/: index.tsx
src/components/common/CommandPalette/: index.tsx
src/components/common/CommitDetailsDialog/: index.tsx
src/components/common/CommitDialog/: index.tsx
src/components/common/ConfirmationDialog/: index.tsx
src/components/common/CreateBranchDialog/: index.tsx
src/components/common/CreateTagDialog/: index.tsx
src/components/common/DiffSummary/: index.tsx
src/components/common/FileDiff/: index.tsx
src/components/common/FileDiffViewer/: index.tsx  utils.ts
src/components/common/FilePath/: index.tsx
src/components/common/FileSelectorDialog/: index.tsx
src/components/common/FileViewer/: utils.ts
src/components/common/Logo/: index.tsx
src/components/common/ProfilePicture/: index.tsx
src/components/common/RefSelector/: index.tsx
src/components/common/RemotesDialog/: index.tsx
src/components/common/RepositoryUrlDialog/: index.tsx
src/components/common/SettingsDialog/: index.tsx  utils.ts
src/components/common/SnapshotDetailsDialog/: index.tsx
src/components/common/StashDialog/: index.tsx
src/components/common/StashToolbar/: index.tsx
src/components/common/WorktreeFileDiffDialog/: index.tsx
src/context/: actions.ts  branches.ts  dialogs.ts  directory.ts  files.ts  ids.ts  pages.ts  upstream.ts
src/interactions/: ai.ts  branch.ts  checkout.ts  commit.ts  file.ts  flows.ts  folder.ts  operations.ts  remote.ts  repository.ts  stash.ts  storage.ts  tag.ts  updates.ts  view.ts
src/state/: actions.ts  branches.ts  dialogs.ts  file.ts  pages.ts  settings.ts  storage.ts  upstream.ts
src/utils/: actions.ts  animation.ts  app.ts  array.ts  behavior.ts  error.ts  highlighting.ts  hooks.ts  interaction.ts  number.ts  pagination.ts  performance.ts  repository.ts  shortcuts.ts  string.ts  styles.ts  time.ts  types.ts
(+319 files in other folders)
