[package]
name = "dragit"
version = "1.0.4"
description = ""
authors = ["Alejandro De Cicco"]
edition = "2021"


[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dragit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }


[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
borsh = { workspace = true }
tauri-plugin-store = { workspace = true }

api = { path = "src/api" }
models = { path = "src/models" }
settings = { path = "src/settings" }
git_handler = { path = "src/git_handler" }
repo_watcher = { path = "src/repo_watcher" }
diffs = { path = "src/diffs" }

tauri-plugin-dialog = { version = "2" }
tauri-plugin-clipboard-manager = { version = "2.2.2" }
tauri-plugin-process = { version = "2" }
tauri-plugin-shell = { version = "2" }
tauri-plugin-http = { version = "2" }
tauri-plugin-opener = "2"


[workspace]
members = [
  "src/api",
  "src/models",
  "src/settings",
  "src/git_handler",
  "src/repo_watcher",
  "src/diffs",
]


[workspace.dependencies]
tauri = { version = "2.10.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
borsh = { version = "1.5.7", features = ["derive"] }
tauri-plugin-store = { version = "2" }
partially = { version = "0.2.1", features = ["derive"] }


[profile.dev]
debug = 0
