[package]
name = "dragit"
description = ""
authors = ["Alejandro De Cicco"]
edition = "2021"


[lib]
name = "dragit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[build-dependencies]
tauri-build = { version = "2.1.0", features = [] }


[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }
tauri-plugin-store = { workspace = true }

api = { path = "src/api" }
models = { path = "src/models" }
storage = { path = "src/storage" }
git_handler = { path = "src/git_handler" }
repo_watcher = { path = "src/repo_watcher" }
diffs = { path = "src/diffs" }
utils = { path = "src/utils" }

tauri-plugin-dialog = { version = "2" }
tauri-plugin-clipboard-manager = { version = "2.2.2" }
tauri-plugin-process = { version = "2" }
tauri-plugin-shell = { version = "2" }
tauri-plugin-http = { version = "2" }
tauri-plugin-opener = "2"


[workspace]
members = [
  "src/api",
  "src/models",
  "src/storage",
  "src/git_handler",
  "src/repo_watcher",
  "src/diffs",
  "src/utils",
]


[workspace.dependencies]
tauri = { version = "2.10.1", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
borsh = { version = "1.5.7", features = ["derive"] }
tauri-plugin-store = { version = "2" }
partially = { version = "0.2.1", features = ["derive"] }


[profile.dev]
debug = 0


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
