[package]
name = "ai"
edition = "2021"


[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }

models = { path = "../models" }
utils = { path = "../utils" }

reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "json"] }
keyring = { version = "4.1.2", features = [
    "apple-native-keyring-store",
    "windows-native-keyring-store",
    "zbus-secret-service-keyring-store",
    "linux-keyutils-keyring-store",
] }
