[package]
name = "models"
version = "0.1.0"
edition = "2021"

[dependencies]
parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "1.0.64"
tauri = "2.4.0"
