[package]
name = "models"
edition = "2021"


[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
borsh = { workspace = true}
partially = { workspace = true}

parking_lot = { version = "0.12.3", features = ["deadlock_detection"] }
thiserror = { version = "1.0.64" }
strum = { version = "0.26.3", features = ["derive"] }
